--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -178,16 +177,13 @@ section {
     font-size: 16px
 }
 
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
@@ -222,10 +218,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -234,10 +231,6 @@ section {
 
 .secondary-border {
     border-color: #39a6b2;
-}
-
-.trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -281,4 +274,8 @@ section {
 
 .text-right {
     text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
